# pdfpc-ts

./: .gitignore  .oxfmtrc.json  Cargo.toml  README-zh.md  README.md  index.html  package.json  pnpm-lock.yaml  prettier.config.cjs  vite.config.ts  wrangler.toml
.github/: dependabot.yml
.github/workflows/: bump.yml  main.yml  oxlint.yml
compute-js/: fastly.toml  package.json  pnpm-lock.yaml  publish-content.config.js  static-publish.rc.js
compute-js/src/: index.js
public/: _headers
src/: App.tsx  DropZone.tsx  lib.rs  main.css  pdfium-worker.ts
